--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "ionic:serve": "npm run dev"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@capacitor/android": "^4.3.0",
     "@capacitor/core": "4.3.0",
     "@capacitor/ios": "^4.3.0",
-    "@ionic/react": "^6.2.8",
-    "@ionic/react-router": "^6.0.0-rc.4",
-    "ionic": "^5.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
